@@ -1,5 +1,9 @@
 CruiseControl Release Notes - Latest CVS
 
+ModificationSet
+----------------------
+* Fixed bogus "A modification was detected in the future" message
+* Now properly checks time of modficiations that are added as elements
 
 CruiseControl Release Notes - 2.1.5
 
